# pathdiff

./: Cargo.toml
src/: lib.rs
