[package]
name = "pathdiff"
version = "0.2.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
description = "Library for diffing paths to obtain relative paths"
documentation = "https://docs.rs/pathdiff/"
repository = "https://github.com/Manishearth/pathdiff"
keywords = ["path", "relative"]
license = "MIT/Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
camino = { version = "1.0.5", optional = true }
